Move templates under here

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include acis_thermal_check/dea_check/*
 include acis_thermal_check/dpa_check/*
 include acis_thermal_check/psmc_check/*
+include acis_thermal_check/templates/*
